config/local/emptydir.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  template:
    spec:
      volumes:
      - name: storage
        emptyDir: {}
