config/local/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app
  name: app
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: app
    weight: 100
